// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutputGenerator #buildAnnotations returns the expected array of annotations 1`] = `
Array [
  Object {
    "annotation_level": "warning",
    "end_line": 1,
    "message": "\\"So\\" adds no meaning",
    "path": "cats.md",
    "start_line": 1,
  },
  Object {
    "annotation_level": "warning",
    "end_line": 1,
    "message": "\\"was stolen\\" may be passive voice",
    "path": "cats.md",
    "start_line": 1,
  },
]
`;

exports[`OutputGenerator #buildSummary returns the expected string if there are suggestions 1`] = `"**2 suggestions** have been found in **1 file**."`;

exports[`OutputGenerator #buildSummary returns the expected string if there is just one 1`] = `"**1 suggestion** has been found in **1 file**."`;

exports[`OutputGenerator #buildSummary returns the expected string with zero results 1`] = `"**0 suggestions** have been found in **0 files**."`;

exports[`OutputGenerator #generate generates the expected result 1`] = `
Object {
  "annotations": Array [
    Object {
      "annotation_level": "warning",
      "end_line": 1,
      "message": "\\"So\\" adds no meaning",
      "path": "cats.md",
      "start_line": 1,
    },
    Object {
      "annotation_level": "warning",
      "end_line": 1,
      "message": "\\"was stolen\\" may be passive voice",
      "path": "cats.md",
      "start_line": 1,
    },
  ],
  "summary": "**2 suggestions** have been found in **1 file**.",
  "title": "See suggestions below.",
}
`;

exports[`OutputGenerator #generate only uses the enabled providers 1`] = `
Object {
  "annotations": Array [],
  "summary": "No issues have been found, great job!",
  "title": "No issues have been found!",
}
`;

exports[`OutputGenerator static#removeMarkdownFromFiles removes markdown from the files and returns the expected map 1`] = `
Map {
  "filename.md" => "This is some text",
  "anotherfile.md" => "this Has some Problems. it sure does Jason?",
  "cats.md" => "So the cat was stolen.",
}
`;
